objects/ASI_CRM_CN_Brand_T1_Group_Item__c.object
<CustomObject>
    <description>ASI CRM CN</description>
    <fields>
        <fullName>ASI_CRM_CN_Brand_T1_Group__c</fullName>
        <label>Brand T1 Group</label>
        <referenceTo>ASI_CRM_CN_Brand_T1_Group__c</referenceTo>
        <relationshipLabel>Brand T1 Group Items</relationshipLabel>
        <relationshipName>ASI_CRM_Brand_T1_Group_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Brand T1 Group Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN FOC Brand</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipLabel>Brand T1 Group Items</relationshipLabel>
        <relationshipName>ASI_CRM_Brand_T1_Group_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Brand T1 Group Item</label>
    <nameField>
        <displayFormat>Item-{000000}</displayFormat>
        <label>Brand T1 Group Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand T1 Group Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Brand_T1_Group_Item</fullName>
        <active>true</active>
        <label>CN Brand T1 Group Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>